--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Django==1.5.1
 Mezzanine==1.4.7
 Pillow==2.0.0
 bleach==1.2.2
+boto==2.9.5
 distribute==0.6.31
 dj-database-url==0.2.1
+django-storages==1.1.8
 filebrowser-safe==0.2.27
 grappelli-safe==0.2.21
 gunicorn==0.17.4
